# droid

./: .gitignore  CONTRIBUTE.md  LICENSE  NOTICE  README.md  requirements-qa.txt  requirements.txt  setup.cfg
.github/workflows/: publish.yml  release.yml  test.yml
src/droid/: __init__.py  __main__.py  abstracts.py  color.py  config.py  convert.py  export.py  integrity.py  list.py  registry.py  rule_loader.py  search.py  validate.py
src/droid/commands/: __init__.py
src/droid/commands/deploy/: export.py  integrity.py  search.py
src/droid/commands/rules/: convert.py  export.py  integrity.py  list_cmd.py  search.py  update.py  validate.py
src/droid/commands/sources/: update.py
src/droid/sources/: sigmahq.py
tests/: test_convert.py  test_export.py  test_filters.py  test_json_logging.py  test_validate.py  test_version.py
tests/files/: test_config.toml  test_config_correlation.toml  test_config_custom_pipelines.toml  test_validate.yml
tests/files/filters/pizza_planet/: filter_domain_controllers.yml
tests/files/filters/zoidberg/: filter_domain_controllers.yml
tests/files/pipelines/: splunk_process_creation.yml
tests/files/raw-rules/: convert_valid_splunk.yml
tests/files/sigma-rules/invalid/: convert_invalid_rule.yml  invalid_rule.yml
tests/files/sigma-rules/valid/: convert_valid_correlation_rule.yml  convert_valid_rule.yml
