[metadata]
name = detect-droid
version = 0.1.0
author = cert-eu/mlc
author_email = services@cert.europa.eu
description = Detection Rules Optimisation Integration Deployment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/certeu/droid

[options]
packages=find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    PyYAML==6.0.1
    pySigma==0.11.4
    ruamel.yaml==0.18.1
    azure-common==1.1.28
    azure-core==1.29.5
    azure-identity==1.15.0
    azure-mgmt-core==1.4.0
    azure-mgmt-monitor==6.0.2
    azure-mgmt-resource==23.0.1
    azure-mgmt-resourcegraph==8.0.0
    azure-mgmt-securityinsight==1.0.0
    azure-monitor-query==1.2.0
    splunk-sdk==1.7.4
    colorama==0.4.6
    python-json-logger==2.0.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    droid = droid.__main__:main
