[metadata]
name = detect-droid
version = 0.2.11
author = cert-eu/mlc
author_email = services@cert.europa.eu
description = Detection Rules Optimisation Integration Deployment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/certeu/droid
repository = "https://github.com/certeu/droid"
license = "EUPL-1.2"

[options]
packages=find:
package_dir =
    = src
python_requires = >=3.11.8
install_requires =
    PyYAML==6.0.1
    pySigma==0.11.18
    ruamel.yaml==0.18.1
    azure-common==1.1.28
    azure-core==1.30.1
    azure-identity==1.16.1
    azure-mgmt-core==1.4.0
    azure-mgmt-monitor==6.0.2
    azure-mgmt-resource==23.0.1
    azure-mgmt-resourcegraph==8.0.0
    azure-mgmt-securityinsight==2.0.0b2
    azure-monitor-query==1.3.0
    splunk-sdk==2.0.1
    colorama==0.4.6
    python-json-logger==2.0.7
    elasticsearch==8.14.0
    requests==2.32.3

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    droid = droid.__main__:main
