[metadata]
name = detect-droid
version = 0.3.1
author = cert-eu/mlc
author_email = services@cert.europa.eu
description = Detection Rules Optimisation Integration Deployment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/certeu/droid
repository = "https://github.com/certeu/droid"
license = "EUPL-1.2"

[options]
packages=find:
package_dir =
    = src
python_requires = >=3.11.8
install_requires =
    PyYAML==6.0.3
    pySigma==1.3.1
    ruamel.yaml==0.19.1
    azure-common==1.1.28
    azure-core==1.39.0
    azure-identity==1.25.3
    azure-mgmt-core==1.6.0
    azure-mgmt-monitor==7.0.0
    azure-mgmt-resource==25.0.0
    azure-mgmt-resource-subscriptions==1.0.0b1
    azure-mgmt-resourcegraph==8.0.1
    azure-mgmt-securityinsight==2.0.0b2
    azure-monitor-query==2.0.0
    splunk-sdk==2.1.1
    python-json-logger==4.1.0
    requests==2.33.1
    elasticsearch==9.3.0
    typer==0.24.1
    rich==15.0.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    droid = droid.__main__:main
